master/force-app/main/default/objects/Therapy_Milestone__c/Therapy_Milestone__c.object-meta.xml
<CustomObject>
    <label>Therapy Milestone</label>
    <nameField>
        <label>Therapy Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Therapy Milestones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>