master/force-app/main/default/objects/Therapy_Milestone__c/fields/Default_Resource__c.field-meta.xml
<CustomField>
    <fullName>Default_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Resource</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Therapy Milestones</relationshipLabel>
    <relationshipName>Therapy_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>