master/force-app/main/default/objects/Therapy_Milestone__c/fields/Preceding_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Preceding_Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preceding Milestone</label>
    <referenceTo>Therapy_Milestone__c</referenceTo>
    <relationshipLabel>Therapy Milestones</relationshipLabel>
    <relationshipName>Therapy_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>