master/force-app/main/default/objects/Therapy_Milestone__c/fields/Therapy_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Therapy_Cycle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Therapy Cycle</label>
    <referenceTo>Therapy_Cycle__c</referenceTo>
    <relationshipLabel>Therapy Milestones</relationshipLabel>
    <relationshipName>Therapy_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>